modify the file_io

--- a/01_numpy/09_file_io.ipynb
+++ b/01_numpy/09_file_io.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,17 +12,7 @@
       "Array saved to array.txt\n",
       "Loaded array from array.txt:\n",
       " [[1. 2. 3.]\n",
-      " [4. 5. 6.]]\n",
-      "Array saved to array.npy\n",
-      "Loaded array from array.npy:\n",
-      " [[1 2 3]\n",
-      " [4 5 6]]\n",
-      "Arrays saved to arrays.npz\n",
-      "Loaded arrays from arrays.npz:\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "[[ 2  4  6]\n",
-      " [ 8 10 12]]\n"
+      " [4. 5. 6.]]\n"
      ]
     }
    ],
@@ -40,26 +30,80 @@
     "\n",
     "# Load array from a text file\n",
     "loaded_array = np.loadtxt(\"array.txt\")\n",
-    "print(\"Loaded array from array.txt:\\n\", loaded_array)\n",
-    "\n",
+    "print(\"Loaded array from array.txt:\\n\", loaded_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array saved to array.npy\n",
+      "Loaded array from array.npy:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the npy will just store one array\n",
     "# Save array to a binary file\n",
     "np.save(\"array.npy\", a)\n",
     "print(\"Array saved to array.npy\")\n",
     "\n",
     "# Load array from a binary file\n",
     "loaded_binary_array = np.load(\"array.npy\")\n",
-    "print(\"Loaded array from array.npy:\\n\", loaded_binary_array)\n",
-    "\n",
+    "print(\"Loaded array from array.npy:\\n\", loaded_binary_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrays saved to arrays.npz\n",
+      "Loaded arrays from arrays.npz:\n",
+      "NpzFile 'arrays.npz' with keys: arr_0, arr_1, arr_2, arr_3, arr_4\n",
+      "arr_0 [[1 1 1]\n",
+      " [1 1 1]]\n",
+      "arr_1 [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "arr_2 [[ 1  4  9]\n",
+      " [16 25 36]]\n",
+      "arr_3 [[  1   8  27]\n",
+      " [ 64 125 216]]\n",
+      "arr_4 [[   1   16   81]\n",
+      " [ 256  625 1296]]\n"
+     ]
+    }
+   ],
+   "source": [
     "# Save multiple arrays to a compressed file\n",
-    "np.savez(\"arrays.npz\", a=a, b=a*2)\n",
+    "np.savez(\"arrays.npz\", *[a**i for i in range(5)])\n",
     "print(\"Arrays saved to arrays.npz\")\n",
     "\n",
     "# Load multiple arrays from a compressed file\n",
     "loaded_arrays = np.load(\"arrays.npz\")\n",
     "print(\"Loaded arrays from arrays.npz:\")\n",
-    "print(loaded_arrays[\"a\"])\n",
-    "print(loaded_arrays[\"b\"])\n"
+    "print(loaded_arrays)\n",
+    "for i,j in loaded_arrays.items():\n",
+    "    print(i, j)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
