--- a/00_basics/01_iterators.ipynb
+++ b/00_basics/01_iterators.ipynb
@@ -43,7 +43,7 @@
     "\"\"\"\n",
     "    Obviously it's working like\n",
     "    1. __iter__ to create the iter\n",
-    "    2. __next__ to call every time iteration...\n",
+    "    2. __next__ to call every iteration\n",
     "\"\"\"\n",
     "class iterclass:\n",
     "\n",
@@ -72,17 +72,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Node(0)\n",
       "Node(1)\n",
       "Node(2)\n",
+      "Node(3)\n",
+      "Node(4)\n",
+      "Node(5)\n",
+      "Node(6)\n",
+      "Node(7)\n",
+      "Node(8)\n",
+      "Node(9)\n",
       "yeah there is a Node(1)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Node(1), Node(2), Node(3), Node(4)]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -106,17 +124,15 @@
     "\n",
     "\n",
     "root = Node(0)\n",
-    "child1 = Node(1)\n",
-    "child2 = Node(2)\n",
-    "root.add_child(child1)\n",
-    "root.add_child(child2)\n",
+    "[root.add_child(Node(i)) for i in range(10)]\n",
     "# Outputs Node(1), Node(2)\n",
     "for ch in root:\n",
-    "    print(ch)\n",
-    "    \n",
+    "    print(ch)    \n",
     "\n",
-    "if list(root)[1] in root:\n",
-    "    print(\"yeah there is a Node(1)\")"
+    "if root[1] in root:\n",
+    "    print(\"yeah there is a Node(1)\")\n",
+    "    \n",
+    "root[1: 5]"
    ]
   },
   {
