--- a/01_numpy/01_array_creation.ipynb
+++ b/01_numpy/01_array_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,8 @@
     "\n",
     "import numpy as np\n",
     "\n",
+    "\n",
+    "\n",
     "# Creating arrays \n",
     "# try adding the suffix _like after the functions below\n",
     "array = np.array([1, 2, 3])\n",
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +66,16 @@
       "Linspace: [0.   0.25 0.5  0.75 1.  ]\n",
       "Logspace: [1.02400000e+03 1.09951163e+12 1.18059162e+21 1.26765060e+30]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1.02400000e+03, 1.09951163e+12, 1.18059162e+21, 1.26765060e+30])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
