--- a/01_numpy/05_statistical_functions.ipynb
+++ b/01_numpy/05_statistical_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,6 +38,7 @@
     "# Standard deviation\n",
     "print(\"Standard Deviation:\", np.std(a))\n",
     "\n",
+    "\n",
     "# Variance\n",
     "print(\"Variance:\", np.var(a))\n",
     "\n",
@@ -57,14 +58,26 @@
     "print(\"Cumulative Sum:\", np.cumsum(a))\n",
     "\n",
     "# Cumulative product\n",
-    "print(\"Cumulative Product:\", np.cumprod(a))\n"
+    "print(\"Cumulative Product:\", np.cumprod(a))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(2.0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
